Project/force-app/main/default/objects/Project__c/fields/Spent_Budget__c.field-meta.xml
<CustomField>
    <fullName>Spent_Budget__c</fullName>
    <label>Spent Budget</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>