Project/force-app/main/default/objects/Project__c/fields/Stage_Formula__c.field-meta.xml
<CustomField>
    <fullName>Stage_Formula__c</fullName>
    <formula>CASE(
    TEXT(Stage__c),
    &quot;Initialization&quot;, &quot;🚀 Initialization&quot;,
    &quot;Preparation&quot;, &quot;📝 Preparation&quot;,
    &quot;In Process&quot;, &quot;🔨 In Process&quot;,
    &quot;Completed&quot;, &quot;✅ Completed&quot;,
    &quot;❓ On Hold&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Formula</label>
    <type>Text</type>
</CustomField>