Project/force-app/main/default/objects/Project__c/validationRules/Client_Project_Account_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Project_Account_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Client_Project&quot;, 
    ISBLANK(Client__c), 
    NOT(ISPICKVAL(Client__r.Type, &quot;Client&quot;))
)</errorConditionFormula>
    <errorMessage>Client project must be linked with client account type</errorMessage>
</ValidationRule>