Project/force-app/main/default/objects/Project__c/validationRules/Internal_Project_Account_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Project_Account_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Internal_Project&quot;, 
    ISBLANK(Client__c), 
    NOT(ISPICKVAL(Client__r.Type, &quot;Internal Department&quot;))
)</errorConditionFormula>
    <errorMessage>Internal project must be linked with Account of type Internal Department</errorMessage>
</ValidationRule>